<resources>
    <string name="app_name">YaCupSurpise</string>
    <string name="please_fill">Пожалуйста заполните поле \'%1$s\'</string>
    <string name="please_enter_email">Пожалуйста введите email</string>
    <string name="err_not_internet">Нет соеднинения с сетью</string>
    <string name="err_loading">При загрузке возникла ошибка. Повторите позже.</string>
    <string name="err_parsing">Возникла ошибка при обработке запроса.</string>
    <string name="loading">Загрузка</string>
    <string name="users">Пользователи</string>
    <string name="profile">Профиль</string>

    <string name="faw_user" translatable="false">&#xf007;</string>
    <string name="faw_users" translatable="false">&#xf0c0;</string>
    <string name="faw_outgoing" translatable="false">&#xf311;</string>
    <string name="faw_gift" translatable="false">&#xf06b;</string>
    <string name="faw_times" translatable="false">&#xf00d;</string>
    <string name="faw_image" translatable="false">&#xf03e;</string>
    <string name="faw_video" translatable="false">&#xf1c8;</string>
    <string name="faw_sand_clock" translatable="false">&#xf251;</string>
    <string name="faw_check" translatable="false">&#xf00c;</string>
    <string name="surprises">Сюрпризы</string>


</resources>
